init ohos in wakelock
Signed-off-by: hezhengyi <ssyzesb@qq.com>

--- a/wakelock/pubspec.yaml
+++ b/wakelock/pubspec.yaml
@@ -35,6 +35,9 @@ flutter:
         pluginClass: WakelockPlugin
       ios:
         pluginClass: WakelockPlugin
+      ohos:
+        package: createivemaybeno.wakelock
+        pluginClass: WakelockPlugin
       macos:
         default_package: wakelock_macos
       windows:
