修改编译配置
Signed-off-by: hezhengyi <ssyzesb@qq.com>

--- a/wakelock/ohos/wakelock/oh-package.json5
+++ b/wakelock/ohos/wakelock/oh-package.json5
@@ -21,7 +21,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@ohos/flutter_ohos": "file:./libs/flutter.har"
+    "@ohos/flutter_ohos": "file:./har/flutter.har"
   },
 }
 
